2004-07-25  Dalibor Topic  <robilad@kaffe.org>

        * include/Makefile.am
	(LIBXMLJ_JNI_HDRS) Updated.

        * include/Makefile.in,
        libraries/javalib/Makefile.am,
        libraries/javalib/Makefile.in,
        libraries/javalib/all.files:
	Regenerated.

        * kaffe/scripts/javadoc.in,
	kaffe/scripts/compat/javadoc.in:
	Updated for libxslt transformer.

        * libraries/clib/libxmlj/xmlj_dom.c,
        libraries/clib/libxmlj/xmlj_dom.h,
        libraries/clib/libxmlj/xmlj_error.c,
        libraries/clib/libxmlj/xmlj_io.c,
        libraries/clib/libxmlj/xmlj_io.h,
        libraries/clib/libxmlj/xmlj_node.c,
        libraries/clib/libxmlj/xmlj_sax.c,
        libraries/clib/libxmlj/xmlj_sax.h,
        libraries/clib/libxmlj/xmlj_transform.c,
        libraries/clib/libxmlj/xmlj_util.c,
        libraries/clib/libxmlj/xmlj_util.h,
        libraries/clib/libxmlj/xmlj_xpath.c,
        libraries/javalib/gnu/xml/aelfred2/SAXDriver.java,
        libraries/javalib/gnu/xml/aelfred2/XmlParser.java,
        libraries/javalib/gnu/xml/libxmlj/dom/GnomeAttr.java,
        libraries/javalib/gnu/xml/libxmlj/dom/GnomeCDATASection.java,
        libraries/javalib/gnu/xml/libxmlj/dom/GnomeCharacterData.java,
        libraries/javalib/gnu/xml/libxmlj/dom/GnomeComment.java,
        libraries/javalib/gnu/xml/libxmlj/dom/GnomeDocument.java,
        libraries/javalib/gnu/xml/libxmlj/dom/GnomeDocumentBuilder.java,
        libraries/javalib/gnu/xml/libxmlj/dom/GnomeDocumentBuilderFactory.java,
        libraries/javalib/gnu/xml/libxmlj/dom/GnomeDocumentFragment.java,
        libraries/javalib/gnu/xml/libxmlj/dom/GnomeDocumentType.java,
        libraries/javalib/gnu/xml/libxmlj/dom/GnomeElement.java,
        libraries/javalib/gnu/xml/libxmlj/dom/GnomeEntity.java,
        libraries/javalib/gnu/xml/libxmlj/dom/GnomeEntityReference.java,
        libraries/javalib/gnu/xml/libxmlj/dom/GnomeNamedNodeMap.java,
        libraries/javalib/gnu/xml/libxmlj/dom/GnomeNode.java,